add docs for user service
